implementing multi layer spot mode